<resources>
    <string name="app_name">Gift Store</string>
    <string name="texto01">Welcome!!</string>
    <string name="texto02">Ingresar</string>
    <string name="texto03">Olvidaste tu contraseña?</string>
    <string name="texto04">¡¡No estoy Registrado!!</string>
    <string name="texto05">Correo Electrónico</string>
    <string name="texto06">Contraseña</string>
    <string name="texto07">Nuevo Usuario</string>
    <string name="texto08">Nombre(s)</string>
    <string name="texto09">Apellido Paterno</string>
    <string name="texto10">Apellido Materno</string>
    <string name="texto11">Registrarse</string>
    <string name="texto12">Ya estoy Registrado</string>
    <string name="texto13">Datos del Usuario</string>
    <string name="texto14">Tienda</string>
    <string name="texto15">Salir</string>
    <string name="texto16">Productos</string>
    <string name="texto17">Usuarios</string>

    <string name="cb_cliente">Cliente</string>
    <string name="cb_administrador">Administrador</string>

    <string name="boton01">Agregar Producto</string>
    <string name="boton02">Regresar</string>

    <string name="admin01">Listado de Productos</string>
    <string name="admin02">Agregar Producto</string>
    <string name="admin03">Foto del Producto</string>

    <string name="hint11">Nombre Corto</string>
    <string name="hint12">Nombre Completo</string>
    <string name="hint13">Descripción</string>
    <string name="hint14">Categoria</string>
    <string name="hint15">Precio</string>

    <string-array name="categoria_producto">
        <item>Artesanía</item>
        <item>Perfume</item>
        <item>Bolso</item>
        <item>Pulsera</item>
        <item>Otros</item>
    </string-array>

    <string name="card01">Nombre del Producto</string>
    <string name="card02">Descripción</string>
    <string name="card03">Categoría</string>
    <string name="card04">$ 9,999.99</string>

    <string name="producto">Al contrario del pensamiento popular, el texto de Lorem Ipsum
        no es simplemente texto aleatorio. Tiene sus raices en una pieza cl´sica de la
        literatura del Latin, que data del año 45 antes de Cristo, haciendo que este
        adquiera mas de 2000 años de antiguedad. Richard McClintock, un profesor de Latin
        de la Universidad de Hampden-Sydney en Virginia, encontró una de las palabras más
        oscuras de la lengua del latín, "consecteur", en un pasaje de Lorem Ipsum, y al
        seguir leyendo distintos textos del latín, descubrió la fuente indudable.
        Lorem Ipsum viene de las secciones 1.10.32 y 1.10.33 de "de Finnibus Bonorum et
        Malorum" (Los Extremos del Bien y El Mal) por Cicero, escrito en el año 45 antes
        de Cristo. Este libro es un tratado de teoría de éticas, muy popular durante el
        Renacimiento. La primera linea del Lorem Ipsum, "Lorem ipsum dolor sit amet..",
        viene de una linea en la sección 1.10.32</string>
    <string name="detalle01">Al contrario del pensamiento popular, el texto de Lorem Ipsum no es simplemente texto aleatorio. Tiene sus raices en una pieza clásica de la literatura del Latin, que data del año 45 antes de Cristo, haciendo que este adquiera mas de 2000 años de antiguedad.</string>
    <string name="descripcion01">XICO es un personaje que busca generar un cambio positivo a través...</string>
    <string name="descripcion02">XICO es un personaje que busca generar...</string>
    <string name="precio01">$ 999.99</string>
    <string name="categoria01">Artesanía</string>

</resources>

