<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".Admin.AdminAgregarProducto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="textEnd"
            style="@style/Titulo02"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin02"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"
            style="@style/Titulo03"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombreCorto_AgregarProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint11"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombreCompleto_AgregarProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint12"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descripcion_AgregarProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint13"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoria_AgregarProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint14"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/precio_AgregarProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint15"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/nombreFoto_AgregarProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin03"
            android:textSize="16sp"
            android:textColor="@color/gris_5E"
            android:layout_marginVertical="10dp"/>

        <ImageView
            android:id="@+id/foto_AgregarProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/btnAgregarFoto_AgregarProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_agregar_fotos"
            android:layout_marginVertical="10dp"
            android:background="@color/white"
            app:tint="@color/rojo_88"/>

        <Button
            android:id="@+id/btnAgregarProducto_AgregarProd"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="@color/rojo_88"
            android:text="@string/boton01"
            android:textAllCaps="true"
            android:layout_marginVertical="30dp"
            style="@style/Boton01"/>

        <Button
            android:id="@+id/btnRegresar_AgregarProd"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="@color/azul_29"
            android:text="@string/boton02"
            android:textAllCaps="true"
            style="@style/Boton01"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"/>
    </LinearLayout>
</ScrollView>