<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_margin="5dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/azul_e4">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="12dp">

            <ImageView
                android:id="@+id/fotoProd"
                android:layout_gravity="center"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:scaleType="centerInside"
                android:src="@drawable/producto01" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombreCortoProd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/card01"
                style="@style/Titulo01"/>

            <TextView
                android:id="@+id/descripcionProd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginHorizontal="10dp"
                android:text="@string/card02"
                style="@style/Texto01"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/categoriaProd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/card03"
                        style="@style/Texto02"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/precioProd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/card04"
                        style="@style/Precio01"/>

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>