<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Admin.AdminDetalleProducto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/foto_DetalleProd"
                android:layout_width="500dp"
                android:layout_height="500dp"
                android:src="@drawable/producto011"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/nombre_DetalleProd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/card01"
                android:textAppearance="?attr/textAppearanceHeadline4" />

            <TextView
                android:id="@+id/descripcion_DetalleProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/card02"
                android:textAppearance="?attr/textAppearanceBody1" />

            <TextView
                android:id="@+id/precio_DetalleProd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card04"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textAlignment="textEnd"
                android:textStyle="bold"/>

        </LinearLayout>
    </FrameLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojo_c3"
        android:layout_gravity="bottom">

        <ImageButton
            android:id="@+id/btnRegresar_DetalleProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_regresar"
            android:backgroundTint="@color/rojo_c3"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"/>
    
</androidx.coordinatorlayout.widget.CoordinatorLayout>